LIST OF CHANGES

 - simple uptime report for Illumina sequencing instruments
 - reinmplementation of events reporting
 - ClearPress library is pinned to v. 473.0.5

release 85.6
 - code and tests changes to reduce number of warnings under Perl 5.22.2
 - use mysql 5.7.13 in travis (installing from deb)
 - Run web page
   - removed image browser link
   - Add EBI submissions link
 - Build.PL fix to ensure that images under htdocs dir are copied to blib
   when building.
 - updated links to NPG QC since the pages moved to SeqQC

release 85.5
 - removed all code that relates to instrument utilisation
 - removed an option to create database entries via XML POST.
 - removed custom error view
 - deleted special privisions for the 'pipeline' user
 - removed unused xml views for run lists
 - Install all files, including cgi-related, within the install action.
 - Remove instrument utilisation views for web pages.
 - Deprecate 'request approval' instrument status, enable status change
   from either of down statuses directly to 'wash required'.
 - Remove code and tests for deprecated instrument statuses.
 - Create flags to mark users and usergroups as deprecated,
   deprecate 'approvers' group.
 - User and usergroup lists are alphabetically sorted and include only
   current entries.
 - Fixed instrument status menu for batch updates to display only
   current statuses.
 - Composition-enabled LIMs object and reference finder.
 - Subset support added to the rpt key based composition factory.
 - Objects's attributes based composition factory sets only those components
   that are either defined or required. Previously an undef value might
   have been used for a component attribute even if the value did not have
   to be set, i.e. the code was not future compatible with planned removal
   of 'Maybe' qualifies from the tag_index and subset definition.

release 85.4
 - Run/instrument tracking; added full support for HiSeq 4000 and limited support
   for NextSeq and MiniSeq