@@ -2,6 +2,8 @@ LIST OF CHANGES
 
  - simple uptime report for Illumina sequencing instruments
  - reinmplementation of events reporting
+ - timing of emails to followers is changed from statuses
+   'run complete' and 'run archived' to 'qc review pending' and 'qc complete'.
  - ClearPress library is pinned to v. 473.0.5
 
 release 85.6
